--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Hungry Bear Studio <roar@hungrybearstudio.com> (hungrybearstudio.com)",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0"
   }
 }
