--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Hungry Bear Studio <roar@hungrybearstudio.com> (hungrybearstudio.com)",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "node-fetch": "^2.6.1"
   }
