--- a/package.json
+++ b/package.json
@@ -3,16 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
-  "author": "Hungry Bear Studio <roar@hungrybearstudio.com> (hungrybearstudio.com)",
+  "author": "Rich Haines <hello@richardhaines.dev> (richardhaines.dev)",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "node-fetch": "^2.6.1"
+    "dotenv": "^10.0.0"
   }
 }
